# volosti-server-starlette

./: .flake8  LICENSE  README.rst  pyproject.toml
tests/: test_wui_main.py
volosti_server_starlette/: app.py
volosti_server_starlette/wui/: __init__.py  main.py
