
[tool.poetry]
name = "volosti-server-starlette"
version = "0.1.dev1"
description = "Разрабатываемая реализация сервера Волостей на веб-фреймворке Starlette"
license = "MIT"

authors = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]
maintainers = [
    "Ruslan Ilyasovich Gilfanov <ri.gilfanov@yandex.ru>",
]

readme = "README.rst"
homepage = "https://pypi.org/project/volosti-server-starlette"
repository = "https://github.com/volosti/volosti-server-starlette"

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
aiosqlite = { version = ">=0.17.0", optional = true }
asyncpg = { version = ">=0.26.0", optional = true }
cryptography = { version = "^37.0.4", optional = true }
gunicorn = { version = "^20.1.0", optional = true }
hypercorn = { version = ">=0.13.2", optional = true }
jinja2 = { version = "^3.1.2", optional = true }
pycryptodome = { version = "^3.15.0", optional = true }
python-multipart = { version = "*", optional = true }
starlette = ">=0.20.4"
uvicorn = { version = ">=0.18.2", optional = true }
volosti-server-common = { version = "^0.1.dev1", allow-prereleases = true }

[tool.poetry.extras]
gunicorn = ["gunicorn"]
hypercorn = ["hypercorn"]
openssl = ["cryptography"]
postgresql = ["asyncpg"]
pycryptodome = ["pycryptodome"]
sqlite = ["aiosqlite"]
uvicorn = ["uvicorn"]
wui = ["jinja2", "python-multipart"]
all = [
    "aiosqlite",
    "asyncpg",
    "cryptography",
    "gunicorn",
    "hypercorn",
    "jinja2",
    "pycryptodome",
    "python-multipart",
    "uvicorn",
]

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
isort = "^5.10.1"
mypy = ">=0.971"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
trio = ">=0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "wemake"
src_paths = ["volosti_server_starlette", "tests"]

[tool.mypy]
files = ["volosti_server_starlette", "tests"]
